--- a/sources/gui/ui/ConfigGameRounds.ui
+++ b/sources/gui/ui/ConfigGameRounds.ui
@@ -31,6 +31,12 @@
                     <layout class="QGridLayout" name="gridLayout_2">
                         <item row="0" column="0">
                             <widget class="QGroupBox" name="groupGameRound">
+                                <property name="sizePolicy">
+                                    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                                        <horstretch>1</horstretch>
+                                        <verstretch>0</verstretch>
+                                    </sizepolicy>
+                                </property>
                                 <property name="title">
                                     <string>Liste des Parties</string>
                                 </property>
@@ -56,7 +62,13 @@
                                                 </size>
                                             </property>
                                             <property name="text">
-                                                <string>+</string>
+                                                <string/>
+                                            </property>
+                                            <property name="icon">
+                                                <iconset resource="../../../resources/EvenementLoto.qrc">
+                                                    <normaloff>:/icons/icons/submit-for-approval.png</normaloff>
+                                                    :/icons/icons/submit-for-approval.png
+                                                </iconset>
                                             </property>
                                         </widget>
                                     </item>
@@ -75,7 +87,13 @@
                                                 </size>
                                             </property>
                                             <property name="text">
-                                                <string>-</string>
+                                                <string/>
+                                            </property>
+                                            <property name="icon">
+                                                <iconset resource="../../../resources/EvenementLoto.qrc">
+                                                    <normaloff>:/icons/icons/clear-symbol.png</normaloff>
+                                                    :/icons/icons/clear-symbol.png
+                                                </iconset>
                                             </property>
                                         </widget>
                                     </item>
@@ -94,7 +112,13 @@
                                                 </size>
                                             </property>
                                             <property name="text">
-                                                <string>^</string>
+                                                <string/>
+                                            </property>
+                                            <property name="icon">
+                                                <iconset resource="../../../resources/EvenementLoto.qrc">
+                                                    <normaloff>:/icons/icons/sort-up.png</normaloff>
+                                                    :/icons/icons/sort-up.png
+                                                </iconset>
                                             </property>
                                         </widget>
                                     </item>
@@ -113,7 +137,13 @@
                                                 </size>
                                             </property>
                                             <property name="text">
-                                                <string>v</string>
+                                                <string/>
+                                            </property>
+                                            <property name="icon">
+                                                <iconset resource="../../../resources/EvenementLoto.qrc">
+                                                    <normaloff>:/icons/icons/sort-down.png</normaloff>
+                                                    :/icons/icons/sort-down.png
+                                                </iconset>
                                             </property>
                                         </widget>
                                     </item>
@@ -138,6 +168,12 @@
                         </item>
                         <item row="0" column="1">
                             <widget class="QGroupBox" name="groupSubRound">
+                                <property name="sizePolicy">
+                                    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                                        <horstretch>1</horstretch>
+                                        <verstretch>0</verstretch>
+                                    </sizepolicy>
+                                </property>
                                 <property name="title">
                                     <string>Phases de la partie</string>
                                 </property>
@@ -187,7 +223,13 @@
                                                 </size>
                                             </property>
                                             <property name="text">
-                                                <string>+</string>
+                                                <string/>
+                                            </property>
+                                            <property name="icon">
+                                                <iconset resource="../../../resources/EvenementLoto.qrc">
+                                                    <normaloff>:/icons/icons/submit-for-approval.png</normaloff>
+                                                    :/icons/icons/submit-for-approval.png
+                                                </iconset>
                                             </property>
                                         </widget>
                                     </item>
@@ -206,7 +248,13 @@
                                                 </size>
                                             </property>
                                             <property name="text">
-                                                <string>-</string>
+                                                <string/>
+                                            </property>
+                                            <property name="icon">
+                                                <iconset resource="../../../resources/EvenementLoto.qrc">
+                                                    <normaloff>:/icons/icons/clear-symbol.png</normaloff>
+                                                    :/icons/icons/clear-symbol.png
+                                                </iconset>
                                             </property>
                                         </widget>
                                     </item>
@@ -225,7 +273,13 @@
                                                 </size>
                                             </property>
                                             <property name="text">
-                                                <string>^</string>
+                                                <string/>
+                                            </property>
+                                            <property name="icon">
+                                                <iconset resource="../../../resources/EvenementLoto.qrc">
+                                                    <normaloff>:/icons/icons/sort-up.png</normaloff>
+                                                    :/icons/icons/sort-up.png
+                                                </iconset>
                                             </property>
                                         </widget>
                                     </item>
@@ -244,7 +298,13 @@
                                                 </size>
                                             </property>
                                             <property name="text">
-                                                <string>v</string>
+                                                <string/>
+                                            </property>
+                                            <property name="icon">
+                                                <iconset resource="../../../resources/EvenementLoto.qrc">
+                                                    <normaloff>:/icons/icons/sort-down.png</normaloff>
+                                                    :/icons/icons/sort-down.png
+                                                </iconset>
                                             </property>
                                         </widget>
                                     </item>
@@ -269,6 +329,12 @@
                         </item>
                         <item row="0" column="2">
                             <widget class="QGroupBox" name="groupPhase">
+                                <property name="sizePolicy">
+                                    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                                        <horstretch>1</horstretch>
+                                        <verstretch>0</verstretch>
+                                    </sizepolicy>
+                                </property>
                                 <property name="title">
                                     <string>Configuration de la phase:</string>
                                 </property>
@@ -276,10 +342,10 @@
                                     <item row="0" column="2">
                                         <widget class="QComboBox" name="SubRoundTypes"/>
                                     </item>
-                                    <item row="1" column="0">
-                                        <widget class="QLabel" name="label_3">
-                                            <property name="text">
-                                                <string>Lots:</string>
+                                    <item row="2" column="0" colspan="3">
+                                        <widget class="QTextEdit" name="TextPrices">
+                                            <property name="undoRedoEnabled">
+                                                <bool>false</bool>
                                             </property>
                                         </widget>
                                     </item>
@@ -296,10 +362,10 @@
                                             </property>
                                         </spacer>
                                     </item>
-                                    <item row="2" column="0" colspan="3">
-                                        <widget class="QTextEdit" name="TextPrices">
-                                            <property name="undoRedoEnabled">
-                                                <bool>false</bool>
+                                    <item row="1" column="0">
+                                        <widget class="QLabel" name="label_3">
+                                            <property name="text">
+                                                <string>Lots:</string>
                                             </property>
                                         </widget>
                                     </item>
@@ -557,7 +623,9 @@
             </item>
         </layout>
     </widget>
-    <resources/>
+    <resources>
+        <include location="../../../resources/EvenementLoto.qrc"/>
+    </resources>
     <connections>
         <connection>
             <sender>ButtonOk</sender>
