--- a/sources/gui/ui/About.ui
+++ b/sources/gui/ui/About.ui
@@ -9,8 +9,8 @@
             <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>417</width>
-                <height>421</height>
+                <width>638</width>
+                <height>480</height>
             </rect>
         </property>
         <property name="sizePolicy">
@@ -40,7 +40,7 @@
                     <property name="minimumSize">
                         <size>
                             <width>355</width>
-                            <height>107</height>
+                            <height>115</height>
                         </size>
                     </property>
                     <property name="maximumSize">
@@ -71,18 +71,21 @@
                             p, li { white-space: pre-wrap; }
                             &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:9pt;
                             font-weight:400; font-style:normal;&quot;&gt;
+                            &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
+                            -qt-block-indent:0; text-indent:0px;&quot;&gt; &lt;/p&gt;
                             &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px;
                             margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt; &lt;span
                             style=&quot; font-size:14pt;&quot;&gt;Event Loto Associatif&lt;/span&gt; &lt;/p&gt;
                             &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
-                            -qt-block-indent:0; text-indent:0px;&quot;&gt;Pour le sou des écoles de Genay.&lt;/p&gt;
+                            -qt-block-indent:0; text-indent:0px;&quot;&gt;Pour le sou des écoles de Genay. &lt;/p&gt;
                             &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
                             -qt-block-indent:0; text-indent:0px;&quot;&gt;le github: &lt;a href=&quot;https://github.com/Silmaen/EvenementLoto&quot;&gt;&lt;span
-                            style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;Événement Loto&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;
+                            style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;Événement Loto&lt;/span&gt;&lt;/a&gt;
+                            &lt;/p&gt;
                             &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
-                            -qt-block-indent:0; text-indent:0px;&quot;&gt;Auteur: Damien Lachouette.&lt;/p&gt;
+                            -qt-block-indent:0; text-indent:0px;&quot;&gt;Auteur: Damien Lachouette. &lt;/p&gt;
                             &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
-                            -qt-block-indent:0; text-indent:0px;&quot;&gt;Copyright (c) 2021.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;
+                            -qt-block-indent:0; text-indent:0px;&quot;&gt;Copyright (c) 2021. &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;
                         </string>
                     </property>
                     <property name="acceptRichText">
@@ -133,8 +136,7 @@
                                         PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
                                         You should have received a copy of the GNU General Public License along with
-                                        this program. If not, see
-                                        &lt;https://www.gnu.org/licenses/&gt;.
+                                        this program. If not, see &lt;https://www.gnu.org/licenses/&gt;.
                                     </string>
                                 </property>
                             </widget>
@@ -170,7 +172,7 @@
         </layout>
     </widget>
     <resources>
-        <include location="../../resources/EvenementLoto.qrc"/>
+        <include location="../../../resources/EvenementLoto.qrc"/>
     </resources>
     <connections>
         <connection>
