--- a/sources/gui/ui/ConfigEvent.ui
+++ b/sources/gui/ui/ConfigEvent.ui
@@ -6,8 +6,8 @@
             <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>611</width>
-                <height>302</height>
+                <width>689</width>
+                <height>526</height>
             </rect>
         </property>
         <property name="windowTitle">
@@ -192,6 +192,55 @@
                 </spacer>
             </item>
             <item>
+                <widget class="QGroupBox" name="groupBox_2">
+                    <property name="title">
+                        <string>Règlement</string>
+                    </property>
+                    <layout class="QGridLayout" name="gridLayout_3">
+                        <item row="1" column="2">
+                            <widget class="QPushButton" name="buttonExportRules">
+                                <property name="text">
+                                    <string>Export</string>
+                                </property>
+                                <property name="icon">
+                                    <iconset resource="../../../resources/EvenementLoto.qrc">
+                                        <normaloff>:/icons/icons/date-from.png</normaloff>:/icons/icons/date-from.png
+                                    </iconset>
+                                </property>
+                            </widget>
+                        </item>
+                        <item row="1" column="0">
+                            <widget class="QPushButton" name="buttonImportRules">
+                                <property name="text">
+                                    <string>Import</string>
+                                </property>
+                                <property name="icon">
+                                    <iconset resource="../../../resources/EvenementLoto.qrc">
+                                        <normaloff>:/icons/icons/date-to.png</normaloff>:/icons/icons/date-to.png
+                                    </iconset>
+                                </property>
+                            </widget>
+                        </item>
+                        <item row="0" column="0" colspan="3">
+                            <widget class="QTextEdit" name="textRules"/>
+                        </item>
+                        <item row="1" column="1">
+                            <spacer name="horizontalSpacer_7">
+                                <property name="orientation">
+                                    <enum>Qt::Horizontal</enum>
+                                </property>
+                                <property name="sizeHint" stdset="0">
+                                    <size>
+                                        <width>40</width>
+                                        <height>20</height>
+                                    </size>
+                                </property>
+                            </spacer>
+                        </item>
+                    </layout>
+                </widget>
+            </item>
+            <item>
                 <widget class="QFrame" name="frame">
                     <property name="sizePolicy">
                         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -311,7 +360,9 @@
         <tabstop>ButtonApply</tabstop>
         <tabstop>ButtonCancel</tabstop>
     </tabstops>
-    <resources/>
+    <resources>
+        <include location="../../../resources/EvenementLoto.qrc"/>
+    </resources>
     <connections>
         <connection>
             <sender>ButtonOk</sender>
@@ -320,8 +371,8 @@
             <slot>actOk()</slot>
             <hints>
                 <hint type="sourcelabel">
-                    <x>189</x>
-                    <y>274</y>
+                    <x>274</x>
+                    <y>506</y>
                 </hint>
                 <hint type="destinationlabel">
                     <x>299</x>
@@ -336,8 +387,8 @@
             <slot>actApply()</slot>
             <hints>
                 <hint type="sourcelabel">
-                    <x>313</x>
-                    <y>279</y>
+                    <x>381</x>
+                    <y>506</y>
                 </hint>
                 <hint type="destinationlabel">
                     <x>427</x>
@@ -352,8 +403,8 @@
             <slot>actCancel()</slot>
             <hints>
                 <hint type="sourcelabel">
-                    <x>418</x>
-                    <y>274</y>
+                    <x>488</x>
+                    <y>506</y>
                 </hint>
                 <hint type="destinationlabel">
                     <x>474</x>
@@ -368,8 +419,8 @@
             <slot>actSearchOrgaLogo()</slot>
             <hints>
                 <hint type="sourcelabel">
-                    <x>361</x>
-                    <y>196</y>
+                    <x>419</x>
+                    <y>208</y>
                 </hint>
                 <hint type="destinationlabel">
                     <x>613</x>
@@ -384,12 +435,44 @@
             <slot>actSearchLogo()</slot>
             <hints>
                 <hint type="sourcelabel">
-                    <x>586</x>
-                    <y>107</y>
+                    <x>669</x>
+                    <y>114</y>
                 </hint>
                 <hint type="destinationlabel">
                     <x>614</x>
                     <y>109</y>
+                </hint>
+            </hints>
+        </connection>
+        <connection>
+            <sender>buttonImportRules</sender>
+            <signal>clicked()</signal>
+            <receiver>ConfigEvent</receiver>
+            <slot>actImportRules()</slot>
+            <hints>
+                <hint type="sourcelabel">
+                    <x>46</x>
+                    <y>446</y>
+                </hint>
+                <hint type="destinationlabel">
+                    <x>-4</x>
+                    <y>456</y>
+                </hint>
+            </hints>
+        </connection>
+        <connection>
+            <sender>buttonExportRules</sender>
+            <signal>clicked()</signal>
+            <receiver>ConfigEvent</receiver>
+            <slot>actExportRules()</slot>
+            <hints>
+                <hint type="sourcelabel">
+                    <x>639</x>
+                    <y>444</y>
+                </hint>
+                <hint type="destinationlabel">
+                    <x>697</x>
+                    <y>445</y>
                 </hint>
             </hints>
         </connection>
@@ -400,5 +483,7 @@
         <slot>actCancel()</slot>
         <slot>actSearchOrgaLogo()</slot>
         <slot>actSearchLogo()</slot>
+        <slot>actImportRules()</slot>
+        <slot>actExportRules()</slot>
     </slots>
 </ui>
